--- a/index.html
+++ b/index.html
@@ -25,20 +25,26 @@
       </div>
     </div>
     <h2>New Update! Beta V0.1.2: Added fake counter (New update soon)</h2>
-    <div class="container">
-      <h2>Youtube</h2>
-      <a href="youtube-subscribers/abbreviated/?id=UCIPPMRA040LQr5QPyJEbmXA">API Subscribers Counter</a>
+      <div class="container">
+        <h2>Youtube</h2>
+        <a href="youtube-subscribers/abbreviated/?id=UCIPPMRA040LQr5QPyJEbmXA">API Subscribers Counter</a>
+        <br>
+        <a href="youtube-subscribers/?id=UCIPPMRA040LQr5QPyJEbmXA">Estimated Subscribers Counter</a>
+        <br>
+        <a href="youtube-compare/?&id=UCX6OQ3DkcsbYNE6H8uQQuVA&id=UC-lHJZR3Gqxm24_Vd_AJ5Yw">Youtube Compare</a>
+        <br>
+        <a href="video-views-counter/?id=PKtnafFtfEo">Video Views Counter</a>
+      </div>
       <br>
-      <a href="youtube-subscribers/?id=UCIPPMRA040LQr5QPyJEbmXA">Estimated Subscribers Counter</a>
+      <div class="container">
+        <h2>Fake Things</h2>
+        <a href="fake-counter">Fake Counter</a>
+      </div>
       <br>
-      <a href="youtube-compare/?&id=UCX6OQ3DkcsbYNE6H8uQQuVA&id=UC-lHJZR3Gqxm24_Vd_AJ5Yw">Youtube Compare</a>
-      <br>
-      <a href="video-views-counter/?id=PKtnafFtfEo">Video Views Counter</a>
-    </div>
-    <br>
-    <div class="container">
-      <h2>Fake Things</h2>
-      <a href="fake-counter">Fake Counter</a>
+      <div class="container">
+        <h2>Coming Soon</h2>
+        <a href="#">Coming Soon</a>
+      </div>
     </div>
     <div id="disqus_thread"></div>
     <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
